--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -7,14 +7,14 @@
             <div class="flex h-16 items-center justify-between">
               <div class="flex items-center">
                 <div class="flex-shrink-0">
-                  <img class="h-8 w-8" src="/assets/images//favicon-32x32.png" alt="Refinery Crude">
+                  <img class="h-8 w-8" src="/assets/images/favicon-32x32.png" alt="Refinery Crude">
                 </div>
                 <div class="hidden md:block">
                   <div class="ml-10 flex items-baseline space-x-4">
                     <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
                     <a href="#" class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium" aria-current="page">Refinery Crude</a>
 
-                    <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Refinery Docs</a>
+                    <a href="https://docs.honeycomb.io/manage-data-volume/refinery/sampling-methods/" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Refinery Docs</a>
 
                   </div>
                 </div>
