--- a/templates/base.html.tmpl
+++ b/templates/base.html.tmpl
@@ -38,7 +38,48 @@
       </script>
 
 </head>
-<body class="h-full bg-gray-100">
+<body class="h-full bg-gray-100 dark:bg-gray-500">
+
+
+    <!-- [ Top of page nav ] start -->
+    <div class="min-h-full">
+        <nav class="bg-gray-800">
+          <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+            <div class="flex h-16 items-center justify-between">
+              <div class="flex items-center">
+                <div class="flex-shrink-0">
+                  <img class="h-8 w-8" src="/assets/images/favicon-32x32.png" alt="Refinery Crude">
+                </div>
+                <div class="hidden md:block">
+                  <div class="ml-10 flex items-baseline space-x-4">
+                    <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
+                    <a href="/" class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">Refinery Crude</a>
+                    <a href="/inspector" class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium">Rules Inspector</a>
+
+                    <a href="https://docs.honeycomb.io/manage-data-volume/refinery/sampling-methods/" target="_blank" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Refinery Docs</a>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </nav>
+    <!-- [ Top of page nav ] end -->
+
+    <!-- [ Page header and dark/light toggle ] start -->
+        <header class="bg-white shadow dark:bg-gray-700">
+          <div class="mx-auto max-w-7xl py-6 px-4 sm:px-6 lg:px-8">
+            <h1 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-gray-200">{{.title}}</h1>
+            <div class="dark:text-gray-200">Toggle Dark/Light Mode:
+                  <button id="theme-toggle" type="button" class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5">
+                    <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg>
+                    <svg id="theme-toggle-light-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" fill-rule="evenodd" clip-rule="evenodd"></path></svg>
+                  </button>
+            </div>
+          </div>
+        </header>
+    <!-- [ Page title and dark/light toggle ] start -->
+
 {{end}}
 
 {{define "base-bottom"}}
