Get the S3 bucket from an env var, and go back to the TOML display
Signed-off-by: Irving Popovetsky <irving@honeycomb.io>

--- a/templates/inspector.html.tmpl
+++ b/templates/inspector.html.tmpl
@@ -10,17 +10,20 @@
 
             <!-- The Rules file inspector textarea -->
             <div class="mb-4 w-full h-full columns-2 bg-gray-50 rounded-lg border border-gray-200 dark:bg-gray-700 dark:border-gray-600">
-                <div class="header">Original Rules</div>
+                <div class="header dark:text-gray-200">Original Rules</div>
                 <div class="py-2 px-4 w-full bg-white rounded-b-lg dark:bg-gray-800">
                     <label for="editor" class="sr-only">Rules</label>
-                    <textarea name="rules_content" id="editor" rows="30" class="block font-mono px-0 w-full text-sm text-gray-800 bg-white border-0 dark:bg-gray-800 focus:ring-0 dark:text-white dark:placeholder-gray-400">{{.rules_content}}</textarea>
+                    <textarea name="rules_content" id="editor" rows="30"
+                      class="block font-mono px-0 w-full text-sm text-gray-800 bg-white border-0 dark:bg-gray-800 focus:ring-0 dark:text-white dark:placeholder-gray-400">{{.rules_content}}</textarea>
                 </div>
 
+                <div class="header dark:text-gray-200">Original Rules</div>
                 <div class="tree json-container overflow-y-auto py-0 px-4 w-full bg-white rounded-b-lg dark:bg-gray-800">
-                  Parsed Rules
-                
-                  <!-- <label for="parsed_rules" class="sr-only">Parsed Rules</label> -->
-                  <!-- <textarea name="parsed_rules" id="parsed" rows="30" class="block font-mono px-0 w-full text-sm text-gray-800 bg-white border-0 dark:bg-gray-800 focus:ring-0 dark:text-white dark:placeholder-gray-400">{{.parsed_rules}}</textarea> -->
+                  <!-- Parsed Rules -->
+
+                  <label for="parsed_rules" class="sr-only">Parsed Rules</label>
+                  <textarea name="parsed_rules" id="parsed" rows="30"
+                    class="block font-mono px-0 w-full text-sm text-gray-800 bg-white border-0 dark:bg-gray-800 focus:ring-0 dark:text-white dark:placeholder-gray-400">{{.parsed_rules}}</textarea>
                 </div>
             </div>
 
@@ -34,7 +37,7 @@
 
 <!-- Specific Page JS goes HERE  -->
 <!-- thanks to https://github.com/pgrabovets/json-view -->
-<script src="/assets/js/jsonview.js"></script>
+<!-- <script src="/assets/js/jsonview.js"></script>
 <script>
   // get json data
   const data = '{{.parsed_rules}}';
@@ -47,7 +50,7 @@
 
   // expand the tree
   jsonview.expand(tree);
-</script>
+</script> -->
 
 
 {{template "scripts" .}}
