--- a/templates/inspector.html.tmpl
+++ b/templates/inspector.html.tmpl
@@ -17,7 +17,7 @@
                       class="block font-mono px-0 w-full text-sm text-gray-800 bg-white border-0 dark:bg-gray-800 focus:ring-0 dark:text-white dark:placeholder-gray-400">{{.rules_content}}</textarea>
                 </div>
 
-                <div class="header dark:text-gray-200">Original Rules</div>
+                <div class="header dark:text-gray-200">Parsed Rules</div>
                 <div class="tree json-container overflow-y-auto py-0 px-4 w-full bg-white rounded-b-lg dark:bg-gray-800">
                   <!-- Parsed Rules -->
 
